deploy-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec: 
  replicas: 3
  selector: 
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.19
          ports:
            - name: http
              protocol: TCP
              containerPort: 80
              containerPort: 443
