ds.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-exporter
spec:
  selector:
    matchLabels:
      type: monitoring
      app: node-exporter
  template:
    metadata:
      labels:
        type: monitoring
        app: node-exporter
    spec:
      containers:
        - name: node-exporter
          image: prom/node-exporter
