svc-ext.yaml
apiVersion: v1
kind: Service
metadata:
  name: myservice
spec:
  type: ExternalName
  externalName: test.ir
