svc.yaml
apiVersion: v1
kind: Service
metadata: 
  name: nginx-svc
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - port: 8000
      targetPort: 80
